--- a/02-CursosCSS/css/positions-examples.css
+++ b/02-CursosCSS/css/positions-examples.css
@@ -1,3 +1,5 @@
+/* Ver la ultima hora del video de CSS de Jhon Mircha en youtube. */
+
 body {
   margin: 0;
   /* padding-top: 50px; */
@@ -69,3 +71,5 @@ body {
   margin-left: -30px;
   padding-right: -30px;
 }
+
+/* Sigue en colors.html */
