--- a/02-CursosCSS/css/colors.css
+++ b/02-CursosCSS/css/colors.css
@@ -1,3 +1,8 @@
+/* 
+  https://htmlcolorcodes.com/es/ 
+  https://htmlcolorcodes.com/es/nombres-de-los-colores/
+*/
+
 .color-by-name {
   background-color: coral;
   color: rebeccapurple;
@@ -15,11 +20,12 @@ Colores en HEX va a ser colores de 6 dígitos
 */
 .color-hex {
   background-color: #ff6600;
-  background-color: #f60;
+  background-color: #f60; /* Color de arriba simplificado. */
   background-color: #ff6605;
+  /* Ultimos dos numeros del negro son el nivel de opacidad. Si quieres la opacidad al 100% no hace falta agregar los niveles de opacidad porque #000000 ya tiene el 100% de opacidad.*/
   background-color: #00000000;
   background-color: #00000055;
-  background-color: #0003;
+  background-color: #0003; /* De esta forma sube de a 10% el nivel de opacidad. En este caso tiene un nivel del 30%.*/
   color: #12ac78;
   border: thick solid #ffffff;
   border: thick solid #fff;
@@ -45,7 +51,7 @@ Sistema RGB
   background-color: rgb(0, 255, 0);
   background-color: rgb(0, 0, 255);
   background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.92);
+  background-color: rgba(0, 0, 0, 0.92); /* Ver que dice rgbA con opacidad al 92%. */
   color: rgb(255, 102, 0);
   border: thick solid rgb(128, 109, 7);
 }
@@ -54,7 +60,7 @@ Sistema RGB
 Sistema HSL
 HueSaturationLightness (Tono-Saturación-Luminosidad)
 
-El primer es Hue (Círculo Cromático)
+El primer es Hue (Círculo Cromático) representa un angulo.
   0° -> red
   60° -> yellow
   120° -> green
@@ -87,21 +93,25 @@ El tercer valor es Lightness (Luminosidad del Color)
 
 /* 
 Valor transparent: color transparente es igual a aplicar rgba(0,0,0,0)
-Valor currentColor: Hereda el valor por defecto o asignado de la propiedad color, del ancestro que tenga definida esta propiedad, busca del ancestro más cercano al más alejado
+Valor currentColor: Asigna el valor de la propiedad COLOR de ese elemento. Si el elemento no tiene esta propiedad, busca al ancestro que la tenga definida. Del ancestro más cercano al más alejado. Si no encuentra la propiedad, toma el valor por defecto que tiene el navegador que es el negro.
 */
 .color-transparent-current {
   background-color: darkmagenta;
   background-color: currentColor;
   background-color: transparent;
-  color: olive;
+  color: olive; /* Si quito esto, toma el color rojo. */
   border: thick solid currentColor;
 }
 
+/* 
+https://lenguajecss.com/css/colores-y-fondos/propiedad-opacity/ 
+https://www.freecodecamp.org/espanol/news/fondo-transparente-opacidad-de-la-imagen-con-css-y-html/
+*/
 .opacity {
   background-color: orchid;
   color: navy;
   border: thick solid black;
-  opacity: 0.5;
+  opacity: 0.5; /* Aplica a todas las propiedades del elemento. Probar los niveles de opacidad de abajo.*/
   opacity: 1;
   opacity: 0;
   opacity: 0.75;
@@ -122,3 +132,5 @@ Valor currentColor: Hereda el valor por defecto o asignado de la propiedad color
 .opacity-30 {
   opacity: 0.3;
 }
+
+/* Sigue en units.html */
